Test for Safari z-index issue.

--- a/styles/Categories.module.css
+++ b/styles/Categories.module.css
@@ -4,6 +4,7 @@
   padding: 1rem;
   display: flex;
   justify-content: space-between;
+  z-index: 1;
 }
 
 .catBoxRow {
